@@ -1,12 +1,8 @@
 package com.application.claimhereweb.service.impl;
 
-import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -15,6 +11,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.application.claimhereweb.model.entity.User;
 import com.application.claimhereweb.model.repository.UserRepository;
+import com.application.claimhereweb.security.CustomUserDetails;
 
 @Service
 public class JpaUserDetailsService implements UserDetailsService {
@@ -22,28 +19,15 @@ public class JpaUserDetailsService implements UserDetailsService {
     @Autowired
     private UserRepository userRepository;
 
-    @Transactional(readOnly = true)
     @Override
+    @Transactional(readOnly = true)
     public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
 
-        Optional<User> userOptional = userRepository.findByEmail(email);
+        Optional<User> opt = userRepository.findByEmail(email);
 
-        if (userOptional.isEmpty()) {
-            throw new UsernameNotFoundException(String.format("Correo %s no existe en el sistema!", email));
-        }
+        User user = opt.orElseThrow(() ->
+            new UsernameNotFoundException("Correo %s no existe en el sistema!".formatted(email)));
 
-        User user = userOptional.orElseThrow();
-
-        List<GrantedAuthority> authorities = user.getRoles().stream()
-                .map(role -> new SimpleGrantedAuthority(role.getName()))
-                .collect(Collectors.toList());
-
-        return new org.springframework.security.core.userdetails.User(user.getEmail(),
-                user.getPassword(),
-                user.isEnable(),
-                true,
-                true,
-                true,
-                authorities);
+        return new CustomUserDetails(user);   //  ←  devolvemos nuestra clase
     }
 }
